syntax = "proto3";

package infraboard.mpaas.cluster;
option go_package = "github.com/infraboard/mpaas/apps/cluster";

import "mpaas/apps/cluster/pb/cluster.proto";
import "mcube/pb/page/page.proto";
import "mcube/pb/resource/meta.proto";
import "mcube/pb/resource/label.proto";
import "mcube/pb/request/request.proto";


// RPC 应用集群管理
service RPC {
    // 查询集群列表
    rpc QueryCluster(QueryClusterRequest) returns(ClusterSet);
    // 查询集群详情
    rpc DescribeCluster(DescribeClusterRequest) returns(Cluster);
}

message QueryClusterRequest {
    // 资源范围
    // @gotags: json:"scope"
    mcube.resource.Scope scope = 1;
    // 资源标签过滤
    // @gotags: json:"filters"
    repeated mcube.resource.LabelRequirement filters = 2;
    // 分页请求
    // @gotags: json:"page"
    mcube.page.PageRequest page = 3;
    // 集群 Id列表
    // @gotags: json:"ids"
    repeated string ids = 4;
    // 集群 名称列表
    // @gotags: json:"names"
    repeated string names = 5;
    // 服务 Id列表
    // @gotags: json:"service_ids"
    repeated string service_ids = 6;
    // 查询查询集群管理的部署
    // @gotags: json:"with_deployment"
    bool with_deployment = 7;
    // 集群 标签
    // @gotags: json:"label"
    map<string,string> label = 15;
}

message DescribeClusterRequest {
    // 集群Id
    // @gotags: json:"id"
    string id = 1;
    // 查询查询集群管理的部署
    // @gotags: json:"with_deployment"
    bool with_deployment = 2;
}

message UpdateClusterRequest {
    // 集群Id
    // @gotags: json:"id"
    string id = 1;
    // 更新模式
    // @gotags: json:"update_mode"
    infraboard.mcube.request.UpdateMode update_mode = 2;
    // 更新人
    // @gotags: json:"update_by"
    string update_by = 3;
    // 更新时间
    // @gotags: json:"update_at"
    int64 update_at = 4;
    // 集群信息
    // @gotags: json:"spec"
    CreateClusterRequest spec = 5;
}

message DeleteClusterRequest {
    // 部署Id
    // @gotags: json:"id"
    string id = 1;
}